# shanghai-dialect-multi-agent

./: .gitattributes  .gitignore  AGENTS.md  ONLINE_README.txt  README.md  RUN_SAMPLE.bat  SETUP.bat  START_LIVE_AGENT.bat  START_LIVE_DEMO.bat  START_UI.bat  SUBMISSION.md  THIRD_PARTY.md  TRANSCRIBE_AUDIO.bat  pyproject.toml  requirements-asr.txt  requirements-experimental-asr.txt  requirements-finetune.txt  requirements-live.txt  requirements-ocr.txt  requirements-online.txt
app/: streamlit_app.py
configs/: default.json  wu_pronunciation_lexicon.json  wu_reference_experts.json
data/: high_risk_wu_tts_eval.jsonl  shanghai_manifest.jsonl
docs/: WENETSPEECH_WU_DEPLOYMENT_REPORT.md  colleague_quickstart.md  data_decision.md  experiment_protocol.md  multi_agent_ppt_guide.md  presentation_outline.md  project_full_overview.md  project_plan.md  shanghaiguard_wu_generation_expert.md  v2_iteration_report.md  wenetspeech_wu_expert.md
outputs/: help_12_17_answer_wu_official_frontend.txt  help_12_17_final_generation.json  help_12_17_full_audio_evaluation.json  help_57_64_answer_wu_official_frontend.txt  help_57_64_final_generation.json  help_57_64_full_audio_evaluation.json
scripts/: benchmark_wenet_wu_experts.ps1  build_direct_mandarin_manifest.py  build_gender_speaker_balanced_manifest.py  build_real_eval_manifest.py  build_video_pretraining_manifests.py  build_wu_tts_curriculum.py  check_environment.py  download_wenet_wu_sft.py  download_whisper_medium_wu.py  evaluate_dev_set.py  extract_hardsub_references.py  extract_local_hardsub_cues.py  fetch_shanghai_hf_dataset.py  (+25 more)
(+37 files in other folders)
